--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "mongoose": "^8.5.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3"
   }
 }
